--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -220,44 +220,44 @@
     "\n",
     "# ***THINK***\n",
     "\n",
-    "$P(I|THINK) = \\frac{count_{THINK}(I)}{count_{THINK}(\\_)}$ =\n",
+    "$P(I|THINK) = \\frac{count_{THINK}(I)}{count_{THINK}(\\_)} = \\frac{6}{523} = 0.0114$\n",
     "\n",
-    "$P(that|THINK) = \\frac{count_{THINK}(that)}{count_{THINK}(\\_)}$ =\n",
+    "$P(that|THINK) = \\frac{count_{THINK}(that)}{count_{THINK}(\\_)} = \\frac{7}{523} = 0.0133$\n",
     "\n",
-    "$P(there|THINK) = \\frac{count_{THINK}(there)}{count_{THINK}(\\_)}$ =\n",
+    "$P(there|THINK) = \\frac{count_{THINK}(there)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
-    "$P(was|THINK) = \\frac{count_{THINK}(was)}{count_{THINK}(\\_)}$ =\n",
+    "$P(was|THINK) = \\frac{count_{THINK}(was)}{count_{THINK}(\\_)} = \\frac{2}{523} = 0.0038$\n",
     "\n",
-    "$P(a|THINK) = \\frac{count_{THINK}(a)}{count_{THINK}(\\_)}$ =\n",
+    "$P(a|THINK) = \\frac{count_{THINK}(a)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
-    "$P(pain|THINK) = \\frac{count_{THINK}(pain)}{count_{THINK}(\\_)}$ =\n",
+    "$P(pain|THINK) = \\frac{count_{THINK}(pain)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
-    "$P(in|THINK) = \\frac{count_{THINK}(in)}{count_{THINK}(\\_)}$ =\n",
+    "$P(in|THINK) = \\frac{count_{THINK}(in)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
-    "$P(my|THINK) = \\frac{count_{THINK}(my)}{count_{THINK}(\\_)}$ =\n",
+    "$P(my|THINK) = \\frac{count_{THINK}(my)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
-    "$P(leg|THINK) = \\frac{count_{THINK}(leg)}{count_{THINK}(\\_)}$ =\n",
+    "$P(leg|THINK) = \\frac{count_{THINK}(leg)}{count_{THINK}(\\_)} = \\frac{1}{523} = 0.0019$\n",
     "\n",
     "\n",
     "# ***EXPERIENCE***\n",
     "\n",
-    "$P(I|EXPERIENCE) = \\frac{count_{EXPERIENCE}(I)}{count_{EXPERIENCE}(\\_)} = \\frac{9}{457}$ -- # Check this one and then do the rest\n",
+    "$P(I|EXPERIENCE) = \\frac{count_{EXPERIENCE}(I)}{count_{EXPERIENCE}(\\_)} = \\frac{9}{457} = 0.0196$\n",
     "\n",
-    "$P(that|EXPERIENCE) = \\frac{count_{EXPERIENCE}(that)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(that|EXPERIENCE) = \\frac{count_{EXPERIENCE}(that)}{count_{EXPERIENCE}(\\_)} = \\frac{2}{457} = 0.0043$\n",
     "\n",
-    "$P(there|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(there|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)} = \\frac{1}{457} = 0.0021$\n",
     "\n",
-    "$P(was|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(was|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)} = \\frac{1}{457} = 0.0021$\n",
     "\n",
-    "$P(a|EXPERIENCE) = \\frac{count_{EXPERIENCE}(a)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(a|EXPERIENCE) = \\frac{count_{EXPERIENCE}(a)}{count_{EXPERIENCE}(\\_)} = \\frac{5}{457} = 0.0109$\n",
     "\n",
-    "$P(pain|EXPERIENCE) = \\frac{count_{EXPERIENCE}(pain)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(pain|EXPERIENCE) = \\frac{count_{EXPERIENCE}(pain)}{count_{EXPERIENCE}(\\_)} = \\frac{4}{457} = 0.0087$\n",
     "\n",
-    "$P(in|EXPERIENCE) = \\frac{count_{EXPERIENCE}(in)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(in|EXPERIENCE) = \\frac{count_{EXPERIENCE}(in)}{count_{EXPERIENCE}(\\_)} = \\frac{1}{457} = 0.0021$\n",
     "\n",
-    "$P(my|EXPERIENCE) = \\frac{count_{EXPERIENCE}(my)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "$P(my|EXPERIENCE) = \\frac{count_{EXPERIENCE}(my)}{count_{EXPERIENCE}(\\_)} = \\frac{4}{457} = 0.0087$\n",
     "\n",
-    "$P(leg|EXPERIENCE) = \\frac{count_{EXPERIENCE}(leg)}{count_{EXPERIENCE}(\\_)}$ ="
+    "$P(leg|EXPERIENCE) = \\frac{count_{EXPERIENCE}(leg)}{count_{EXPERIENCE}(\\_)} = \\frac{1}{457} = 0.0021$"
    ]
   },
   {
@@ -291,11 +291,21 @@
     "\n",
     "# ***THINK***\n",
     "\n",
-    "$P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = P(I|THINK) \\cdot P(felt|THINK) \\cdot P(that|THINK) \\cdot P(there|THINK) \\cdot P(was|THINK) \\cdot P(a|THINK) \\cdot P(pain|THINK) \\cdot P(in|THINK) \\cdot P(my|THINK) \\cdot P(leg|THINK)$\n",
+    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = P(I|THINK) \\cdot P(that|THINK) \\cdot P(there|THINK) \\cdot P(was|THINK) \\cdot P(a|THINK) \\cdot P(pain|THINK) \\cdot P(in|THINK) \\cdot P(my|THINK) \\cdot P(leg|THINK)$\n",
+    "\n",
+    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 0.0114 \\cdot 0.0133 \\cdot 0.0019 \\cdot 0.0038 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019$\n",
+    "\n",
+    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 2.7105766613436e^{-23}$\n",
     "\n",
     "# ***EXPERIENCE***\n",
     "\n",
-    "$P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = P(I|EXPERIENCE) \\cdot P(felt|EXPERIENCE) \\cdot P(that|EXPERIENCE) \\cdot P(there|EXPERIENCE) \\cdot P(was|EXPERIENCE) \\cdot P(a|EXPERIENCE) \\cdot P(pain|EXPERIENCE) \\cdot P(in|EXPERIENCE) \\cdot P(my|EXPERIENCE) \\cdot P(leg|EXPERIENCE)$"
+    "- $P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = P(I|EXPERIENCE) \\cdot P(that|EXPERIENCE) \\cdot P(there|EXPERIENCE) \\cdot P(was|EXPERIENCE) \\cdot P(a|EXPERIENCE) \\cdot P(pain|EXPERIENCE) \\cdot P(in|EXPERIENCE) \\cdot P(my|EXPERIENCE) \\cdot P(leg|EXPERIENCE)$\n",
+    "\n",
+    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 0.0196 \\cdot 0.0043 \\cdot 0.0021 \\cdot 0.0021 \\cdot 0.0109 \\cdot 0.0087 \\cdot 0.0021 \\cdot 0.0087 \\cdot 0.0021$\n",
+    "\n",
+    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 1.3522802619032273e^{-21}$\n",
+    "\n",
+    "### **The most likely sense for the test item is EXPERIENCE**"
    ]
   },
   {
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,40 +448,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I: \n",
-      " Experience Probability 1.969%\n",
-      " Think Probability: 1.147%\n",
-      "that: \n",
-      " Experience Probability 0.438%\n",
-      " Think Probability: 1.338%\n",
-      "there: \n",
-      " Experience Probability 0.219%\n",
-      " Think Probability: 0.191%\n",
-      "was: \n",
-      " Experience Probability 0.219%\n",
-      " Think Probability: 0.382%\n",
-      "a: \n",
-      " Experience Probability 1.094%\n",
-      " Think Probability: 0.191%\n",
-      "pain: \n",
-      " Experience Probability 0.875%\n",
-      " Think Probability: 0.191%\n",
-      "in: \n",
-      " Experience Probability 0.219%\n",
-      " Think Probability: 0.191%\n",
-      "my: \n",
-      " Experience Probability 0.875%\n",
-      " Think Probability: 0.191%\n",
-      "leg: \n",
-      " Experience Probability 0.219%\n",
-      " Think Probability: 0.191%\n"
+      "EXP:\n",
+      "'I': 0.0197\n",
+      "'that': 0.00438\n",
+      "'there': 0.00219\n",
+      "'was': 0.00219\n",
+      "'a': 0.0109\n",
+      "'pain': 0.00875\n",
+      "'in': 0.00219\n",
+      "'my': 0.00875\n",
+      "'leg': 0.00219\n",
+      "\n",
+      "\n",
+      "THINK:\n",
+      "'I': 0.0115\n",
+      "'that': 0.0134\n",
+      "'there': 0.00191\n",
+      "'was': 0.00382\n",
+      "'a': 0.00191\n",
+      "'pain': 0.00191\n",
+      "'in': 0.00191\n",
+      "'my': 0.00191\n",
+      "'leg': 0.00191\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -489,46 +496,41 @@
     "        sum_dict[\"THINK\"] += len(feel_training_data[i])\n",
     "\n",
     "# created a nested dictionary with one entry for experience and one for think\n",
+    "# the inner dictionaries will have a key value pair for each word in test_features\n",
     "\n",
-    "words_dict = {\"EXP\": {}, \"THINK\": {}}\n",
+    "words_dict = {\"EXP\": {word: 0 for word in test_features}, \"THINK\": {word: 0 for word in test_features}}\n",
     "\n",
     "# loop through each sentence and each word in the sentence\n",
     "# keep the first loop as a range to be able to cross reference labels\n",
     "\n",
     "for i in range(len(feel_training_data)):\n",
     "    for word in feel_training_data[i].split(\" \"):\n",
-    "        \n",
-    "        # check what they are assigned to\n",
     "        if feel_training_labels[i] == \"EXPERIENCE\":\n",
-    "            \n",
-    "            if word not in words_dict[\"EXP\"]:\n",
-    "                # add a new word to the dict or increase the count\n",
-    "                words_dict[\"EXP\"][word] = 1\n",
-    "            else:\n",
+    "            if word in words_dict[\"EXP\"]:\n",
     "                words_dict[\"EXP\"][word] += 1\n",
-    "                \n",
-    "        if feel_training_labels[i] == \"THINK\":\n",
     "\n",
-    "            if word not in words_dict[\"THINK\"]:\n",
-    "                words_dict[\"THINK\"][word] = 1\n",
-    "            else:\n",
+    "        else:\n",
+    "            if word in words_dict[\"THINK\"]:\n",
     "                words_dict[\"THINK\"][word] += 1\n",
     "\n",
-    "# find the probability of a word by dividing the number of occurences\n",
-    "# in a given sense by the total words in the sense overall\n",
-    "# print(words_dict[\"THINK\"][\"I\"]/sum_dict[\"THINK\"])\n",
+    "prob_dict = {\"EXP\": {word: 0 for word in test_features}, \"THINK\": {word: 0 for word in test_features}}\n",
     "\n",
-    "for word in test_features:\n",
-    "    \n",
-    "    # calcuate both probabilities to three decimal points\n",
+    "# find the probability of a word by dividing the number of occurences in a given sense by the total words in the sense overall\n",
+    "# add that probability to the prob_dict for later use\n",
+    "# print probabilities under each sense\n",
     "\n",
-    "    exp_prob = \"{:.3%}\".format(words_dict[\"EXP\"][word]/sum_dict[\"EXP\"])\n",
+    "for key, value in words_dict.items():\n",
+    "    print(key + \":\")\n",
     "\n",
-    "    think_prob = \"{:.3%}\".format(words_dict[\"THINK\"][word]/sum_dict[\"THINK\"])\n",
+    "    for word in test_features:\n",
     "\n",
-    "    # print each word and it's probability of occuring in each sense\n",
+    "        prob = \"{:.3}\".format(words_dict[key][word]/sum_dict[key])\n",
     "\n",
-    "    print(f\"{word}: \\n Experience Probability {exp_prob}\\n Think Probability: {think_prob}\")"
+    "        prob_dict[key][word] = prob\n",
+    "\n",
+    "        print(f\"\\'{word}\\': {prob}\")\n",
+    "        \n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -544,42 +546,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "prob_dict = {\"EXP\": {word: 0 for word in test_features}, \"THINK\": {word: 0 for word in test_features}}\n",
-    "\n",
-    "for key, values in prob_dict.items():\n",
-    "    for val in values:\n",
-    "        prob_dict[key][val] = words_dict[key][val]/sum_dict[key]\n",
-    "\n",
-    "final_dict = {\"EXP\": 1, \"THINK\": 1}\n",
-    "\n",
-    "for key, value in prob_dict.items():\n",
-    "    for ky, val in value.items():\n",
-    "        final_dict[key] = final_dict[key] * val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'EXP': 1.6562149154395024e-21, 'THINK': 2.869221564563354e-23}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The likeliest class is EXPERIENCE.\n"
+     ]
     }
    ],
    "source": [
-    "final_dict"
+    "import numpy as np\n",
+    "\n",
+    "# create a list for each sense\n",
+    "# to hold all of the probabilities\n",
+    " \n",
+    "exp_list = [float(prob_dict[key][word]) for word in prob_dict[key] for key in prob_dict if key == \"EXP\"]\n",
+    "\n",
+    "think_list = [float(prob_dict[key][word]) for word in prob_dict[key] for key in prob_dict if key == \"THINK\"]\n",
+    "\n",
+    "# use numpy prod to multiply all the elements of each list\n",
+    "\n",
+    "exp_res = np.prod(exp_list)\n",
+    "think_res = np.prod(think_list)\n",
+    "\n",
+    "# check which is bigger and print the result\n",
+    "# the results vary slightly from problem 4 because the floating point values used for this computation\n",
+    "# are more precise than the ones I used to compute the probability by hand\n",
+    "# however, the result is still the same regardless of the small differences\n",
+    "\n",
+    "if exp_res > think_res:\n",
+    "    print(\"The likeliest class is EXPERIENCE.\")\n",
+    "else:\n",
+    "    print(\"The likeliest class is THINK.\")"
    ]
   }
  ],
