Revert "Update Introcl_homework_4.ipynb"
This reverts commit 7bd6d5066378d705f71121dd394d330d83907ed9.

--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -178,6 +178,8 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
+    "# CHECK\n",
+    "\n",
     "$P(THINK) = \\frac{count(THINK)}{count(THINK) + count(EXPERIENCE)}$\n",
     "\n",
     "$P(THINK) = \\frac{12}{12 + 15}$\n",
@@ -213,6 +215,7 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
+    "# CLARIFY\n",
     "## What does \"compute how long the document is overall\" mean? Total sentences, total words?\n",
     "\n",
     "# ***THINK***\n",
@@ -284,6 +287,7 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
+    "# CLARIFY\n",
     "\n",
     "# ***THINK***\n",
     "\n",
