--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -583,7 +583,7 @@
     "    print(\"The likeliest class is THINK.\")\n",
     "\n",
     "    #TODO\n",
-    "    "
+    "    #TODO"
    ]
   }
  ],
