--- a/Homework/Introcl_homework_4_espie.ipynb
+++ b/Homework/Introcl_homework_4_espie.ipynb
@@ -178,8 +178,6 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# CHECK\n",
-    "\n",
     "$P(THINK) = \\frac{count(THINK)}{count(THINK) + count(EXPERIENCE)}$\n",
     "\n",
     "$P(THINK) = \\frac{12}{12 + 15}$\n",
@@ -215,8 +213,7 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# CLARIFY\n",
-    "## What does \"compute how long the document is overall\" mean? Total sentences, total words?\n",
+    "# TO-DO Check these numbers\n",
     "\n",
     "# ***THINK***\n",
     "\n",
@@ -287,25 +284,31 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# CLARIFY\n",
-    "\n",
     "# ***THINK***\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = P(I|THINK) \\cdot P(that|THINK) \\cdot P(there|THINK) \\cdot P(was|THINK) \\cdot P(a|THINK) \\cdot P(pain|THINK) \\cdot P(in|THINK) \\cdot P(my|THINK) \\cdot P(leg|THINK)$\n",
+    "-  **$P(THINK) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK)$ is equal to P(THINK) multiplied by the probability of each test feature occuring in the THINK sense.**\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 0.0114 \\cdot 0.0133 \\cdot 0.0019 \\cdot 0.0038 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019$\n",
+    "    - $P(THINK) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = P(THINK) \\cdot (P(I|THINK) \\cdot P(that|THINK) \\cdot P(there|THINK) \\cdot P(was|THINK) \\cdot P(a|THINK) \\cdot P(pain|THINK) \\cdot P(in|THINK) \\cdot P(my|THINK) \\cdot P(leg|THINK))$\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 2.7105766613436e^{-23}$\n",
+    "    - $P(THINK) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = \\frac{4}{9} \\cdot (0.0114 \\cdot 0.0133 \\cdot 0.0019 \\cdot 0.0038 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019 \\cdot 0.0019)$\n",
+    "\n",
+    "    - $P(THINK) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = \\frac{4}{9} \\cdot 2.7105766613436e^{-23}$\n",
+    "\n",
+    "    - $P(THINK) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 1.2047007383749332e^{-23}$\n",
     "\n",
     "# ***EXPERIENCE***\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = P(I|EXPERIENCE) \\cdot P(that|EXPERIENCE) \\cdot P(there|EXPERIENCE) \\cdot P(was|EXPERIENCE) \\cdot P(a|EXPERIENCE) \\cdot P(pain|EXPERIENCE) \\cdot P(in|EXPERIENCE) \\cdot P(my|EXPERIENCE) \\cdot P(leg|EXPERIENCE)$\n",
+    "- **$P(EXPERIENCE) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE)$ is equal to P(EXPERIENCE) multiplied by the probability of each test feature occuring in the EXPERIENCE sense.**\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 0.0196 \\cdot 0.0043 \\cdot 0.0021 \\cdot 0.0021 \\cdot 0.0109 \\cdot 0.0087 \\cdot 0.0021 \\cdot 0.0087 \\cdot 0.0021$\n",
+    "    - $P(EXPERIENCE) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = P(EXPERIENCE) \\cdot (P(I|EXPERIENCE) \\cdot P(that|EXPERIENCE) \\cdot P(there|EXPERIENCE) \\cdot P(was|EXPERIENCE) \\cdot P(a|EXPERIENCE) \\cdot P(pain|EXPERIENCE) \\cdot P(in|EXPERIENCE) \\cdot P(my|EXPERIENCE) \\cdot P(leg|EXPERIENCE))$\n",
     "\n",
-    "- $P(c) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = 1.3522802619032273e^{-21}$\n",
+    "    - $P(EXPERIENCE) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = \\frac{5}{9} \\cdot (0.0196 \\cdot 0.0043 \\cdot 0.0021 \\cdot 0.0021 \\cdot 0.0109 \\cdot 0.0087 \\cdot 0.0021 \\cdot 0.0087 \\cdot 0.0021)$\n",
     "\n",
-    "### **The most likely sense for the test item is EXPERIENCE**"
+    "    - $P(EXPERIENCE) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = \\frac{5}{9} \\cdot 1.3522802619032273e^{-21}$\n",
+    "\n",
+    "    - $P(EXPERIENCE) \\prod_f P(I\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = 7.512668121684597e^{-22}$\n",
+    "\n",
+    "### **The most likely sense for the test item is EXPERIENCE.**"
    ]
   },
   {
@@ -395,26 +398,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experience: 55.556%\n",
-      "Think: 44.444%\n"
+      "Experience: 0.556\n",
+      "Think: 0.444\n"
      ]
     }
    ],
    "source": [
     "# please place your code here\n",
     "\n",
-    "# check if this is the same\n",
-    "# if you did problem 2 right, this is right - vice versa\n",
+    "# calculate the total number of sentences\n",
     "\n",
-    "\n",
-    "#check this, should the sum be total words or total sentences in the corpus?\n",
     "sum = len(feel_training_labels)\n",
     "\n",
-    "p_think = \"{:.3%}\".format(len([label for label in feel_training_labels if label == \"THINK\"])/sum)\n",
+    "# calculate the total number of sentences belonging to each class\n",
+    "# divide them by the sum to get the probability for each class\n",
     "\n",
-    "p_exp = \"{:.3%}\".format(len([label for label in feel_training_labels if label == \"EXPERIENCE\"])/sum)\n",
+    "p_think = len( [label for label in feel_training_labels if label == \"THINK\"])/sum\n",
     "\n",
-    "print(f\"Experience: {p_exp}\\nThink: {p_think}\")"
+    "p_exp = len([label for label in feel_training_labels if label == \"EXPERIENCE\"])/sum\n",
+    "\n",
+    "print(f\"Experience: {p_exp:.3}\\nThink: {p_think:.3}\")"
    ]
   },
   {
@@ -489,10 +492,16 @@
     "\n",
     "sum_dict = {\"EXP\": 0 , \"THINK\": 0}\n",
     "\n",
+    "# loop through the data with a range to cross reference labels\n",
+    "# add up all words for each class into the dict\n",
+    "\n",
     "for i in range(len(feel_training_data)):\n",
+    "\n",
     "    if feel_training_labels[i] == \"EXPERIENCE\":\n",
+    "\n",
     "        sum_dict[\"EXP\"] += len(feel_training_data[i])\n",
     "    else:\n",
+    "\n",
     "        sum_dict[\"THINK\"] += len(feel_training_data[i])\n",
     "\n",
     "# created a nested dictionary with one entry for experience and one for think\n",
@@ -504,13 +513,19 @@
     "# keep the first loop as a range to be able to cross reference labels\n",
     "\n",
     "for i in range(len(feel_training_data)):\n",
+    "\n",
     "    for word in feel_training_data[i].split(\" \"):\n",
+    "\n",
     "        if feel_training_labels[i] == \"EXPERIENCE\":\n",
+    "\n",
     "            if word in words_dict[\"EXP\"]:\n",
+    "\n",
     "                words_dict[\"EXP\"][word] += 1\n",
     "\n",
     "        else:\n",
+    "\n",
     "            if word in words_dict[\"THINK\"]:\n",
+    "\n",
     "                words_dict[\"THINK\"][word] += 1\n",
     "\n",
     "prob_dict = {\"EXP\": {word: 0 for word in test_features}, \"THINK\": {word: 0 for word in test_features}}\n",
@@ -520,15 +535,16 @@
     "# print probabilities under each sense\n",
     "\n",
     "for key, value in words_dict.items():\n",
+    "\n",
     "    print(key + \":\")\n",
     "\n",
     "    for word in test_features:\n",
     "\n",
-    "        prob = \"{:.3}\".format(words_dict[key][word]/sum_dict[key])\n",
+    "        prob = (words_dict[key][word]/sum_dict[key])\n",
     "\n",
     "        prob_dict[key][word] = prob\n",
     "\n",
-    "        print(f\"\\'{word}\\': {prob}\")\n",
+    "        print(f\"\\'{word}\\': {prob:.3}\")\n",
     "        \n",
     "    print(\"\\n\")"
    ]
@@ -546,14 +562,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The likeliest class is EXPERIENCE.\n"
+      "The likeliest class for the test data is EXPERIENCE.\n"
      ]
     }
    ],
@@ -563,11 +579,13 @@
     "# create a list for each sense\n",
     "# to hold all of the probabilities\n",
     " \n",
-    "exp_list = [float(prob_dict[key][word]) for word in prob_dict[key] for key in prob_dict if key == \"EXP\"]\n",
+    "exp_list = [prob_dict[key][word] for word in prob_dict[key] for key in prob_dict if key == \"EXP\"]\n",
     "\n",
-    "think_list = [float(prob_dict[key][word]) for word in prob_dict[key] for key in prob_dict if key == \"THINK\"]\n",
+    "think_list = [prob_dict[key][word] for word in prob_dict[key] for key in prob_dict if key == \"THINK\"]\n",
     "\n",
+    "# use the old sense probabilities from problem 5\n",
     "# use numpy prod to multiply all the elements of each list\n",
+    "# multiply them all together to get the results\n",
     "\n",
     "exp_res = np.prod(exp_list)\n",
     "think_res = np.prod(think_list)\n",
@@ -578,17 +596,15 @@
     "# however, the result is still the same regardless of the small differences\n",
     "\n",
     "if exp_res > think_res:\n",
-    "    print(\"The likeliest class is EXPERIENCE.\")\n",
+    "    print(\"The likeliest class for the test data is EXPERIENCE.\")\n",
     "else:\n",
-    "    print(\"The likeliest class is THINK.\")\n",
-    "\n",
-    "    #TODO"
+    "    print(\"The likeliest class for the test data is THINK.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -602,11 +618,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
