--- a/Homework/Introcl_homework_4_espie.ipynb
+++ b/Homework/Introcl_homework_4_espie.ipynb
@@ -413,7 +413,7 @@
     "# calculate the total number of sentences belonging to each class\n",
     "# divide them by the sum to get the probability for each class\n",
     "\n",
-    "p_think = len( [label for label in feel_training_labels if label == \"THINK\"])/sum\n",
+    "p_think = len([label for label in feel_training_labels if label == \"THINK\"])/sum\n",
     "\n",
     "p_exp = len([label for label in feel_training_labels if label == \"EXPERIENCE\"])/sum\n",
     "\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -587,8 +587,8 @@
     "# use numpy prod to multiply all the elements of each list\n",
     "# multiply them all together to get the results\n",
     "\n",
-    "exp_res = np.prod(exp_list)\n",
-    "think_res = np.prod(think_list)\n",
+    "exp_res = p_exp * (np.prod(exp_list))\n",
+    "think_res = p_think * (np.prod(think_list))\n",
     "\n",
     "# check which is bigger and print the result\n",
     "# the results vary slightly from problem 4 because the floating point values used for this computation\n",
@@ -604,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -618,11 +618,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
