--- a/Homework/Introcl_homework_4_espie.ipynb
+++ b/Homework/Introcl_homework_4_espie.ipynb
@@ -213,8 +213,6 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# TO-DO Check these numbers\n",
-    "\n",
     "# ***THINK***\n",
     "\n",
     "$P(I|THINK) = \\frac{count_{THINK}(I)}{count_{THINK}(\\_)} = \\frac{6}{523} = 0.0114$\n",
@@ -604,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -618,11 +616,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
