--- a/Homework/Introcl_homework_5.ipynb
+++ b/Homework/Introcl_homework_5.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "'0.50573'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
     "\n",
     "# a and b are the vectors\n",
     "\n",
-    "def homemade_similarity(a, b):\n",
+    "def homemade_cosine_similarity(a, b):\n",
     "\n",
     "    #set variables for numerator and denominator\n",
     "\n",
@@ -816,7 +816,7 @@
     "a = [5, 12, 2]\n",
     "b = [7, 2, 9]\n",
     "\n",
-    "homemade_similarity(a, b)"
+    "homemade_cosine_similarity(a, b)"
    ]
   }
  ],
