--- a/Homework/Introcl_homework_5.ipynb
+++ b/Homework/Introcl_homework_5.ipynb
@@ -519,7 +519,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer*"
+    "*space for your text answer*\n",
+    "\n",
+    "1. I thought there might be more words about \"training\" specifically for an event or a job, but it seems like all of the train words reference the passenger transportation kind of train.\n",
+    "\n",
+    "2. Aloof had the most interesting similar words, at least to me. You don't see the word \"aloof\" very often, so a lot of the similar words are also more rarely used and unique. I particularly liked \"sullen\", \"demeanor\", and \"unruffled.\"\n",
+    "\n",
+    "3. It was difficult to imagine profession words that had different senses. I can imagine why though, professional jargon often has a need to reference something very specific that probably won't apply to anything outside of that profession. \"Executive\", \"report\", and \"meeting\" were not my top picks, but they had the most senses and generated the best similar words."
    ]
   },
   {
@@ -699,7 +705,9 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "Aloof is the most aloof word of the bunch."
+    "1. I find it funny that \"changing\" and \"changes\" seem to be less close to \"change\" than \"follow\" in the second visual. It's almost as though the fact that they all come from the same stem goes right over the machine's head in this computation.\n",
+    "\n",
+    "2. The similar words for ignore are definitely *similar* but not as similar as some of the words for change or even aloof are. I would say that the ignore words are more related to how the word is used rather than the actual meaning of the word."
    ]
   },
   {
