--- a/Homework/Introcl_homework_6.ipynb
+++ b/Homework/Introcl_homework_6.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "    Israel/NNP ducks/NN on/P human rights/NN.\n",
     "\n",
-    "Yes, the POS tags here remove the ambiguity. However, the word \"ducks\" was a poor choice, I don't think most people think of the verb first."
+    "Yes, the POS tags here remove the ambiguity. However, the word \"ducks\" was a poor choice, I don't think most people think of the verb on first glance."
    ]
   },
   {
@@ -169,7 +169,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "- This simple tagger gets a relatively high accuracy value because it's identifying the most used words and tagging them with the most likely tag available for them. By doing this, a large chunk of words in the corpus will be tagged with a POS and a decent percentage within that chunk will be tagged with the correct POS tag, quickly driving up the accuracy rate.\n",
+    "\n",
+    "- The model never reaches 100% accuracy because it doesn't take context into account. By mass tagging words only based on the likeliest part of speech, you're always going to mistag some words.\n",
+    "\n",
+    "- By tagging the 100 most frequent words, the accuracy spikes because those words make up a good portion of the corpus. The more words you add, the less and less frequent the words are. By the time you tag the 1000 - 2000 most frequent words in the corpus on this model, the gains level off due probably due to the lack of representation within the corpus. The \"frequent\" words are not frequent enough to make a difference in the accuracy number."
    ]
   },
   {
@@ -185,7 +191,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here *"
+    "*space for your text answer here *\n",
+    "\n",
+    "You should trust the accuracy when you test it on the fiction section.\n",
+    "\n",
+    "Taggers need to have flexibility and reliability across genres, subjects, concepts, etc. That's why it's important to test taggers on a variety of corpuses."
    ]
   },
   {
@@ -233,7 +243,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "The 0th veterbi number is the probability that START will occur, which is always 1.\n",
+    "\n",
+    "- v0 = P(START) = 1\n",
+    "\n",
+    "The 1st veterbi number is the probability that v0 will occur and P(DT | START) and P(the | DT) . \n",
+    "\n",
+    "- v1 = (v0 * P(DT | START)) * P(the | DT) = 1 * 0.14 * 0.63 = 0.0882\n",
+    "\n",
+    "The 2nd viterbi number is the probability that v1 will occur and P(NN | DT) and P(complex | NN).\n",
+    "\n",
+    "- v2 = (v1 * P(NN | DT)) * P(complex | NN) = 0.0882 * 0.61 * 0.0001 = 5.380210 * 10<sup>−6</sup>\n",
+    "\n",
+    "The 3rd viterbi number is the probability that v2 will occur and P(VB | NN) and P(houses | VB).\n",
+    "\n",
+    "- v3 = (v2 * P(VB | NN)) * P(houses | VB) = (5.3802*10<sup>−6</sup> * 0.06) * 0.00003 = 9.68436 * 10<sup>-12</sup>\n",
+    "\n",
+    "The 4th viterbi number is the probability that v3 wil occur and P(NN | VB) and P(students | NN).\n",
+    "\n",
+    "- v4 = (v3 * P(NN | VB)) * P(students | NN) = (9.68436 * 10<sup>-12</sup> * 0.11) * 0.0009 = 9.5875164 * 10<sup>−16</sup>\n",
+    "\n",
+    "**P(START DT NN VB NN | the complex houses students) = 9.5875164 * 10<sup>−16</sup>**\n"
    ]
   },
   {
@@ -265,6 +297,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*space for your text answer here*\n",
+    "\n",
+    "Two possible tags for \"complex\".\n",
+    "\n",
+    "- $v_2(JJ) = 2e-4$\n",
+    "\n",
+    "- $v_2(NN) = 5.5e-6$\n",
+    "\n",
+    "Evaluate the transition between JJ &rarr; VB and NN &rarr; VB.\n",
+    "\n",
+    "- $v_2(JJ) * P(VB | JJ) = 2e-4 * 0.01 = 2.0000000000000003e-06$\n",
+    "\n",
+    "- $v_2(NN) * P(VB |NN) = 5.5e-6 * 0.006 = 3.3e-08$\n",
+    "\n",
+    "Find the maximum likelihood between the two probabilities and multiply it by the probability that VB emits \"houses\".\n",
+    "\n",
+    "- $v_3(VB) = max(2.0000000000000003e-06, 3.3e-08) * P(houses | VB) = 2.0000000000000003e-06 * 0.00003$\n",
+    "\n",
+    "The likeliest path that ends at tag VB and tags \"houses\" as VB is found by tagging \"complex\" as JJ.\n",
+    "\n",
+    "- $v_3(VB) = 6.000000000000001e-11$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -274,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +347,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
