--- a/Homework/Introcl_homework_6.ipynb
+++ b/Homework/Introcl_homework_6.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "- The model never reaches 100% accuracy because it doesn't take context into account. By mass tagging words only based on the likeliest part of speech, you're always going to mistag some words.\n",
     "\n",
-    "- By tagging the 100 most frequent words, the accuracy spikes because those words make up a good portion of the corpus. The more words you add, the less and less frequent the words are. By the time you tag the 1000 - 2000 most frequent words in the corpus on this model, the gains level off due probably due to the lack of representation within the corpus. The \"frequent\" words are not frequent enough to make a difference in the accuracy number."
+    "- By tagging the 100 most frequent words, the accuracy spikes because those words make up a good portion of the corpus. The more words you add, the less and less frequent the words are. By the time you tag the 1000 - 2000 most frequent words in the corpus on this model, the gains level off probably due to the lack of representation within the corpus. The \"frequent\" words are not frequent enough to make a difference in the accuracy number."
    ]
   },
   {
