--- a/Homework/Introcl_homework_6.ipynb
+++ b/Homework/Introcl_homework_6.ipynb
@@ -245,27 +245,27 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "The 0th veterbi number is the probability that START will occur, which is always 1.\n",
+    "The 0th number is the probability that START will occur, which is always 1.\n",
     "\n",
     "- v0 = P(START) = 1\n",
     "\n",
-    "The 1st veterbi number is the probability that v0 will occur and P(DT | START) and P(the | DT) . \n",
+    "The 1st number is the probability that v0 will occur and P(DT | START) and P(the | DT) since we need to evaluate both the transmission and emission probabilities. \n",
     "\n",
     "- v1 = (v0 * P(DT | START)) * P(the | DT) = 1 * 0.14 * 0.63 = 0.0882\n",
     "\n",
-    "The 2nd viterbi number is the probability that v1 will occur and P(NN | DT) and P(complex | NN).\n",
+    "The 2nd number is the probability that v1 will occur and P(NN | DT) and P(complex | NN).\n",
     "\n",
     "- v2 = (v1 * P(NN | DT)) * P(complex | NN) = 0.0882 * 0.61 * 0.0001 = 5.380210 * 10<sup>−6</sup>\n",
     "\n",
-    "The 3rd viterbi number is the probability that v2 will occur and P(VB | NN) and P(houses | VB).\n",
+    "The 3rd number is the probability that v2 will occur and P(VB | NN) and P(houses | VB).\n",
     "\n",
     "- v3 = (v2 * P(VB | NN)) * P(houses | VB) = (5.3802*10<sup>−6</sup> * 0.06) * 0.00003 = 9.68436 * 10<sup>-12</sup>\n",
     "\n",
-    "The 4th viterbi number is the probability that v3 wil occur and P(NN | VB) and P(students | NN).\n",
+    "The 4th number is the probability that v3 wil occur and P(NN | VB) and P(students | NN).\n",
     "\n",
     "- v4 = (v3 * P(NN | VB)) * P(students | NN) = (9.68436 * 10<sup>-12</sup> * 0.11) * 0.0009 = 9.5875164 * 10<sup>−16</sup>\n",
     "\n",
-    "**P(START DT NN VB NN | the complex houses students) = 9.5875164 * 10<sup>−16</sup>**\n"
+    "**P(START DT NN VB NN | the complex houses students) = 9.5875164 * 10<sup>−16</sup>\n"
    ]
   },
   {
@@ -333,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -347,11 +347,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
