--- a/Homework/Introcl_homework_7.ipynb
+++ b/Homework/Introcl_homework_7.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "## Due: Thursday November 11, end of day\n",
     "\n",
-    "## Your name:\n",
-    "## Your EID:\n",
+    "## Your name: Eloragh Espie\n",
+    "## Your EID: eae2273\n",
     "\n",
     "This homework comes with the following files:\n",
     "\n",
@@ -80,7 +80,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "```{<DT>?<JJS?>*<NNP?S?>+}```\n",
+    "\n",
+    "- Precision: 69.41%\n",
+    "- Recall: 62.78%\n",
+    "    \n",
+    "```{<DT>?<PRP$>?<JJS?>?<CD>?<NNS?P?>+}``` \n",
+    "\n",
+    "- Precision: 76.21%\n",
+    "- Recall: 68.93%\n",
+    "\n",
+    "```<DT>?<JJS?>?<NNP?S?><CC>?<NNP?S?>*}```\n",
+    "\n",
+    "- Precision: 68.58%\n",
+    "- Recall: 60.68%\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package conll2000 to\n",
+      "[nltk_data]     /Users/eloraghespie/nltk_data...\n",
+      "[nltk_data]   Package conll2000 is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('conll2000')\n",
+    "\n",
+    "nltk.app.chunkparser()"
    ]
   },
   {
@@ -130,11 +168,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 86.027% \n",
+      "Recall: 62.854% \n",
+      "F-score: 72.637%\n"
+     ]
+    }
+   ],
    "source": [
-    "# or space for an answer in Python, if you like"
+    "# or space for an answer in Python, if you like\n",
+    "\n",
+    "# set the positives and negatives to variables\n",
+    "\n",
+    "tp, fp, fn, tn = 511, 83, 302, 2508\n",
+    "\n",
+    "# create functions for precision, recall, and f_score\n",
+    "# all these do is return the equation\n",
+    "\n",
+    "def precision(tp, fp):\n",
+    "\n",
+    "    return (tp/(tp + fp))\n",
+    "\n",
+    "def recall(tp, fn):\n",
+    "\n",
+    "    return (tp/(tp+fn))\n",
+    "\n",
+    "def f_score(precision, recall):\n",
+    "    \n",
+    "    return (2 * precision * recall / (precision + recall))  \n",
+    "\n",
+    "# calcuate using the functions in the print statement\n",
+    "# the final function is calculated with the precision and recal functions\n",
+    "\n",
+    "print(f\"Precision:{precision(tp, fp): .3%} \\n\\\n",
+    "Recall:{recall(tp, fn): .3%} \\n\\\n",
+    "F-score:{f_score(precision(tp,fp), recall(tp,fn)): .3%}\")  "
    ]
   },
   {
@@ -196,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
