--- a/Homework/Introcl_homework_7_espie.ipynb
+++ b/Homework/Introcl_homework_7_espie.ipynb
@@ -102,6 +102,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*space for your text answer here*\n",
+    "\n",
+    "```{<DT>?<JJS?>*<NNP?S?>+}```\n",
+    "\n",
+    "- Precision: 64.91%\n",
+    "- Recall: 62.78%\n",
+    "\n",
+    "``` {<DT>?<JJS?>*<NNP?S?>+} ```\n",
+    "\n",
+    "``` {<EX>*}```\n",
+    "\n",
+    "- Precision: 69.68%\n",
+    "- Recall 63.59%\n",
+    "\n",
+    "```{<DT>?<RB>*<JJS?>*<VBN>?<NNP?S?>+}```\n",
+    "\n",
+    "``` {<EX>*}```\n",
+    "\n",
+    "- Precision: 70.57%\n",
+    "- Recall: 64.40%\n",
+    "\n",
+    "```{<DT>?<POS>*<RB>*<JJS?>*<VBN>?<NNP?S?>+<CD>*}```\n",
+    "\n",
+    "``` {<EX>*}```\n",
+    "\n",
+    "```{<PRP>*}```\n",
+    "\n",
+    "- Precision: 74.83%\n",
+    "- Recall: 73.14%\n",
+    "\n",
+    "```{<RBR?>*<DT>?<POS>*<RBR?>*<JJS?>*<VBN>?<NNP?S?>+<CD>*}```\n",
+    "\n",
+    "``` {<EX>*}```\n",
+    "\n",
+    "```{<PRP>*}```\n",
+    "\n",
+    "```{<WP>*}```\n",
+    "\n",
+    "- Precision: 75.16%\n",
+    "- Recall 73.95%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Problem 2: Evaluation with Precision and Recall (30 points)\n",
     "\n",
     "The chunker that you used in the previous problem was evaluated\n",
@@ -247,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -261,11 +307,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
