--- a/Homework/Introcl_homework_7_espie.ipynb
+++ b/Homework/Introcl_homework_7_espie.ipynb
@@ -266,8 +266,8 @@
     "* iv. *I know the woman whom sees him\n",
     "* v. *the woman who sees him walk \n",
     "* vi. *the woman who see him walks \n",
-    "* vii. *the women who sees him walk viii. \n",
-    "* *the women who see him walks\n",
+    "* vii. *the women who sees him walk. \n",
+    "* viii. *the women who see him walks\n",
     "\n",
     "Please put your context-free grammar below.\n",
     "\n",
@@ -280,14 +280,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "S: NPSg VPSg | NPPl VPPl\n",
+    "\n",
+    "NPSg = DT NNSg | ProNomSg | ProAccSg | NPSg RC\n",
+    "\n",
+    "NPPl = DT NNPl | ProNomPl | ProAccPl \n",
+    "\n",
+    "VPSg = VBSg | VBSg NNPl | VPSg NPSg | VBSg ProAccSg | VBSg ProAccPl\n",
+    "\n",
+    "VPPl = VBPl | VBPl NNPl | VBPl NPSg | VBPl ProAccSg | VBPl ProAccPl\n",
+    "\n",
+    "RC: Wh S\n",
+    "\n",
+    "DT: the\n",
+    "\n",
+    "NNSg: woman | man\n",
+    "\n",
+    "NNPl: women \n",
+    "\n",
+    "VBSg: sees | walks\n",
+    "\n",
+    "VBPl: see | walk\n",
+    "\n",
+    "ProNomSg: she | he | i\n",
+    "\n",
+    "ProNomPl: they\n",
+    "\n",
+    "ProAccSg: me | him | her \n",
+    "\n",
+    "ProAccPl: them\n",
+    "\n",
+    "Wh: who | whom"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
