--- a/Homework/Introcl_homework_7_espie.ipynb
+++ b/Homework/Introcl_homework_7_espie.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,11 @@
     "```{<WP>*}```\n",
     "\n",
     "- Precision: 75.16%\n",
-    "- Recall 73.95%"
+    "- Recall 73.95%\n",
+    "\n",
+    "My chunker often misanalyzed separate noun phrases that were composed of single NN but were next to each other. So these phrases were independent, but due to how I wrote the regexp, the chunker misanalyzed them as one noun phrase instead of two.\n",
+    "\n",
+    "My chunker also had an issue with special characters like percent signs or hashtags. It often misanalyzed them as a part of a phrase or completely omitted them from a phrase they were in, therefore incorrectly analyzing the total phrase."
    ]
   },
   {
@@ -282,6 +286,8 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
+    "**the tree for \"i know the man whom she sees\" is a separate file in the Canvas upload**\n",
+    "\n",
     "S: NPSg VPSg | NPPl VPPl\n",
     "\n",
     "NPSg = DT NNSg | ProNomSg | ProAccSg | NPSg RC\n",
@@ -300,9 +306,9 @@
     "\n",
     "NNPl: women \n",
     "\n",
-    "VBSg: sees | walks\n",
+    "VBSg: sees | walks | know\n",
     "\n",
-    "VBPl: see | walk\n",
+    "VBPl: see | walk \n",
     "\n",
     "ProNomSg: she | he | i\n",
     "\n",
@@ -323,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -337,11 +343,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
