--- a/Homework/Introcl_homework_7_espie.ipynb
+++ b/Homework/Introcl_homework_7_espie.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,11 +141,7 @@
     "```{<WP>*}```\n",
     "\n",
     "- Precision: 75.16%\n",
-    "- Recall 73.95%\n",
-    "\n",
-    "My chunker often misanalyzed separate noun phrases that were composed of single NN but were next to each other. So these phrases were independent, but due to how I wrote the regexp, the chunker misanalyzed them as one noun phrase instead of two.\n",
-    "\n",
-    "My chunker also had an issue with special characters like percent signs or hashtags. It often misanalyzed them as a part of a phrase or completely omitted them from a phrase they were in, therefore incorrectly analyzing the total phrase."
+    "- Recall 73.95%"
    ]
   },
   {
@@ -286,7 +282,7 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "**the tree for \"i know the man whom she sees\" is a separate file in the Canvas upload**\n",
+    "**The tree for *\"i know the man whom she sees\"* is in a separate file on the canvas upload.**\n",
     "\n",
     "S: NPSg VPSg | NPPl VPPl\n",
     "\n",
@@ -306,9 +302,9 @@
     "\n",
     "NNPl: women \n",
     "\n",
-    "VBSg: sees | walks | know\n",
+    "VBSg: sees | walks\n",
     "\n",
-    "VBPl: see | walk \n",
+    "VBPl: see | walk\n",
     "\n",
     "ProNomSg: she | he | i\n",
     "\n",
@@ -320,16 +316,11 @@
     "\n",
     "Wh: who | whom"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -343,11 +334,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
